Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Advanced - Project</fullName>
        <description>Advanced Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Indirect Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <description>Standard Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CloseDate_TODAY__c</fullName>
        <formula>CloseDate - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Countdown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <description>Used for deal registration.</description>
        <label>Competition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Renewal Request</label>
        <referenceTo>Contract_Renewal__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Left_Until_Expire__c</fullName>
        <formula>if(ISNULL(Registration_Expiration__c),0, if(Registration_Expiration__c - TODAY() &gt;0, Registration_Expiration__c - TODAY(),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left Until Expire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Approved_Date__c</fullName>
        <label>Deal Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Forward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Forward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <description>Used for deal registrations</description>
        <label>Deal ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Source__c</fullName>
        <description>Used for deal registration.</description>
        <label>Deal Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Role__c</fullName>
        <description>Used for deal registration.</description>
        <label>Decision Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approved__c</fullName>
        <label>Discount Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <description>Used for deal registration.</description>
        <label>Distributor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forwarded_Lead_ID__c</fullName>
        <description>The field is updated with a lead id when the opportunity details are forwarded to a partner as a lead.</description>
        <label>Forwarded Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Start__c</fullName>
        <label>Implementation Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IndStatus__c</fullName>
        <formula>IMAGE(CASE( Status_Value__c, &quot;good&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;bad&quot;, &quot;/img/samples/light_red.gif&quot;,&quot;&quot;),&quot;Current Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterviewID__c</fullName>
        <label>InterviewID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intial_Estimated_Close_Date__c</fullName>
        <description>Used for deal registration.</description>
        <label>Initial Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Line_Item_Count_del__c</fullName>
        <description>Line Item count</description>
        <label>Opp Line Item Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Update_Error__c</fullName>
        <label>Opportunity Update Error</label>
        <picklist>
            <picklistValues>
                <fullName>DESC CHG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON DESC CHG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Deals</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Deals</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC10001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC20002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC50000</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Budget__c</fullName>
        <description>Used for deal registration.</description>
        <label>Project Budget</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Budgeted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for deal registration.</description>
        <label>Project Budgeted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Durations__c</fullName>
        <formula>Round(Projected_Finish__c - Implementation_Start__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Durations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Finish__c</fullName>
        <label>Projected Finish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <label>Reason Lost</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Expiration__c</fullName>
        <description>Date the deal registration expires</description>
        <label>Registration Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SplitForm__c</fullName>
        <formula>Amount * 1.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SplitForm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_Value__c</fullName>
        <formula>IF( CloseDate_TODAY__c &gt;0, &quot;good&quot;, &quot;bad&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Forwarded_Lead__c</fullName>
        <formula>if(Deal_Forward__c, HYPERLINK( &quot;/&quot; &amp; Forwarded_Lead_ID__c, &quot;View Forwarded Lead&quot;, &quot;_self&quot;),&quot;Not Forwarded&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Forwarded Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor__c</fullName>
        <label>Winning Competitor</label>
        <picklist>
            <controllingField>Reason_Lost__c</controllingField>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>data</value>
        </filters>
        <label>All Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingThisQTR</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>data</value>
        </filters>
        <label>Closing This Quarter</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Most_Recent_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Most Recent Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Robin_Grochol</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Bill,Cindy,Megan,Wendy</value>
        </filters>
        <label>Robin Grochol</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Advanced</fullName>
        <active>true</active>
        <businessProcess>Advanced - Project</businessProcess>
        <description>This is a complex Opportunity with Project Information</description>
        <label>Advanced - Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>IndirectPartner</fullName>
        <active>true</active>
        <businessProcess>Indirect Sales Process</businessProcess>
        <label>Indirect (Partner)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <label>Service Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <description>This is a standard Opportunity with Products</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>DEC_BADGE_EXC_RULE_6</fullName>
        <active>false</active>
        <description>Only description can be changed up to 7 days. No other field can be changed</description>
        <errorConditionFormula>AND ( 
($Profile.Name &lt;&gt; &quot;System Administrator&quot;), 
( ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;)
   ||
   ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;)
),
(Owner.Id = $User.Id) ,
((TODAY() - CloseDate) &lt;= 7),
(
IF(
(ISCHANGED(Amount)|| ISCHANGED(Name) || ISCHANGED(Type)|| (Opp_Line_Item_Count__c &lt;&gt; priorvalue(Opp_Line_Item_Count__c))),true, NOT(ISCHANGED(Description))

)


)
)</errorConditionFormula>
        <errorMessage>The Opportunity record is closed. The Opportunity Owner can modify only the Opportunity description at this time. Owner cannot  change other fields in the opportunity record or add/delete Opportunity Line items.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DEC_BADGE_EXC_RULE_6a</fullName>
        <active>false</active>
        <description>Only description can be changed up to 7 days. No other field can be changed</description>
        <errorConditionFormula>AND ( 
($Profile.Name &lt;&gt; &quot;System Administrator&quot;), 
( ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;)
   ||
   ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;)
),
(Owner.Id = $User.Id) ,
((TODAY() - CloseDate) &lt;= 7),
(
IF((Opp_Line_Item_Count__c &lt;&gt; priorvalue(Opp_Line_Item_Count__c)),true, NOT(ISCHANGED(Description))

)


)
)</errorConditionFormula>
        <errorMessage>The Opportunity record is closed. The Owner can modify only the Opportunity description at this time. Owner cannot add/delete Opportunity Line Items.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DEC_BADGE_EX_RULE_1</fullName>
        <active>false</active>
        <description>This record has been closed for 7 days. Only the Administrator is allowed to edit the record</description>
        <errorConditionFormula>AND ( 
($Profile.Name &lt;&gt; &quot;System Administrator&quot;),
 
  AND ( (ISPICKVAL(PRIORVALue(StageName),&quot;Closed Won&quot;)) 

  || 

  (ISPICKVAL(PRIORVALue(StageName),&quot;Closed Lost&quot;) )
 ),

 (TODAY() - CloseDate &gt; 7),

 (Owner.Id = $User.Id)




)</errorConditionFormula>
        <errorMessage>The opportunity record has been closed. Only the Administrator is allowed to modify the Opportunity record and add/delete its related records</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DEC_BADGE_EX_RULE_2</fullName>
        <active>false</active>
        <description>Dont allow status change if prior state is closed (unless it is an admin)</description>
        <errorConditionFormula>AND ( 

 ($Profile.Name &lt;&gt; &quot;System Administrator&quot;), 

 ( ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;)
   ||
   ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;)
 ),
 
 (TODAY() - CloseDate &lt;= 7),

(Owner.Id &lt;&gt; $User.Id), 
  
(ISCHANGED(Description))
)</errorConditionFormula>
        <errorMessage>Only the owner or Administrator is allowed to change the status of a record after it is closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DEC_BADGE_EX_RULE_2a</fullName>
        <active>false</active>
        <description>Dont allow status change if prior state is closed (unless it is an admin)</description>
        <errorConditionFormula>AND ( 

 ($Profile.Name &lt;&gt; &quot;System Administrator&quot;), 

 ( ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;)
   ||
   ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;)
 ),
(TODAY() - CloseDate &lt;= 7),
NOT(AND(
(Owner.Id = $User.Id),  
(ISCHANGED(Description))
))

)</errorConditionFormula>
        <errorMessage>The Opportunity record is closed. The Owner can modify only the Opportunity description field at this time. The Administrator has full access.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DEC_BADGE_EX_RULE_3</fullName>
        <active>false</active>
        <description>Dont allow status change if prior state is closed (unless it is an admin)</description>
        <errorConditionFormula>AND ( 

($Profile.Name &lt;&gt; &quot;System Administrator&quot;), 

( ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;) 
|| 
ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;) 
), 

(Owner.Id &lt;&gt; $User.Id)
)</errorConditionFormula>
        <errorMessage>The Opportunity record is closed. Only the Owner or the Administrator is allowed to edit the opportunity record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DEC_BADGE_EX_RULE_4</fullName>
        <active>false</active>
        <description>Num of opportunity product line items cannot be changed</description>
        <errorConditionFormula>AND (
($Profile.Name &lt;&gt; &quot;System Administrator&quot;),
( ISPICKVAL(StageName,&quot;Closed Won&quot;)
   ||
  ISPICKVAL(StageName,&quot;Closed Lost&quot;)
),
(Opp_Line_Item_Count__c &lt;&gt; priorvalue(Opp_Line_Item_Count__c))

)</errorConditionFormula>
        <errorMessage>Opportunity is closed. Opportunity Products cannot be added or removed at this time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>false</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Steps_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL(StageName, &apos;Negotiation/Review&apos;), OR(Description == null,  NextStep == null))</errorConditionFormula>
        <errorDisplayField>NextStep</errorDisplayField>
        <errorMessage>You must fill out the Description and Next Steps fields to advance the Opportunity stage to Negotiation/Review.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Lost_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND (  ISPICKVAL( StageName, &quot;Closed Lost&quot;), ISPICKVAL( Reason_Lost__c , &quot;&quot;)   )</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>If the stage equals closed - lost, then the reason lost is a required field.</errorMessage>
    </validationRules>
</CustomObject>